@@ -15,7 +15,16 @@ To install, download the zip version of the github repository and decompress int
 **NOTE: It is required to have JavaFX and MySQL installed to run this project**
 
 TO compile and run, in your command prompt, go into the src folder directory and run the following commands:
-- `tbd`
-- `tbd`
+- `javac --module-path C:/path/to/JavaFX/lib --add-modules=javafx.controls,javafx.fxml,mysql-connector-j-8 com/Aggie_FindIt/*.java`
+- `java --module-path C:/path/to/JavaFx/lib --add-modules=javafx.base,javafx.graphics,javafx.controls,javafx.fxml.mysql-connector-j-8 -cp . com.Aggie_FindIt.Aggie_FindIt`
+
+## Contributors
+
+- Rupak Dey
+- Mario Saenz
+- Benjamin Widner III
+- Dimitreus Billey
+
+
 
 
